# esp32c3-test1

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: audio.rs  ball.rs  dot_matrix.rs  font.rs  game_state.rs  highscore.rs  lib.rs  main.rs  pad.rs  text_ticker.rs
src/audio/: mixer.rs  mod.rs  sfx.rs
