[package]
name = "esp32c3_test1"
version = "0.1.0"
authors = [""]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "esp32c3_test1"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
# Embassy
embassy-executor = { version = "0.7", features = ["task-arena-size-12288"] }
embassy-sync = "0.6"
embassy-time = "0.4"

# Hardware Abstraction Layer (For the SPI driver to communicate with the MAX7219)
embedded-hal = "1"

# ESP specifics
esp-hal = { version = "0.23", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.6", features = ["esp32c3"] }
esp-backtrace = { version = "0.15", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.13", features = ["esp32c3", "log"] }
esp-storage = { version = "0.4", features = ["esp32c3"] }

# storage api
embedded-storage = "0.3"


# Other stuff
fugit = "0.3"
log = "0.4"
heapless = "0.8"
# NOTE: only used for ceilf in the ticker
libm = "0.2"
# NOTE: only used for sin in the audio
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
